Fix undoing selection modifications when Mask Mode is active

We should not create a non-const iterator over a device when doing
a read-only operation not-in-a-stroke-context thread

BUG:391086